fix: empty but overflowing app container.
I no longer remember what issue these changes were meant to solve but it
seems to cause the overflowing app container.

--- a/src/renderer/styles/styles.scss
+++ b/src/renderer/styles/styles.scss
@@ -14,11 +14,6 @@ body {
   color: white;
 }
 
-/* This fixes some strange margin behaviour with material-ui margins */
-#app {
-  display: inline-block;
-}
-
 *,
 *::after,
 *::before {
